fixed z-index on navbar

--- a/style.css
+++ b/style.css
@@ -561,13 +561,13 @@ Navbar and footer*/
 nav {
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 1;
 }
 
 .navbar {
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 1;
 }
 
 .navbar ul {
